[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/controllers/main_menu_controller.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -180.0
margin_right = 180.0
margin_bottom = 180.0
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 360.0
margin_bottom = 166.0
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 360.0
margin_bottom = 190.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 360.0
margin_bottom = 214.0
text = "Quit"

[node name="GameModeOption" type="OptionButton" parent="."]
margin_left = 376.0
margin_top = 107.0
margin_right = 405.0
margin_bottom = 127.0

[node name="BoardSizeOption" type="OptionButton" parent="."]
margin_left = 371.0
margin_top = 220.0
margin_right = 400.0
margin_bottom = 240.0

[node name="DifficultyOption" type="OptionButton" parent="."]
margin_left = 376.0
margin_top = 177.0
margin_right = 405.0
margin_bottom = 197.0

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="item_selected" from="GameModeOption" to="." method="_on_GameModeOption_item_selected"]
[connection signal="item_selected" from="BoardSizeOption" to="." method="_on_BoardSizeOption_item_selected"]
[connection signal="item_selected" from="DifficultyOption" to="." method="_on_DifficultyOption_item_selected"]
